--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,8 @@ github_username:  Lian939
 theme: minima
 plugins:
   - jekyll-feed
-
+katex:
+  path_to_js: "katex.min.js"
 
 # Exclude from processing.
 # The following items will not be processed, by default.
