--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ plugins:
   - jekyll-feed
 katex:
   path_to_js: "katex.min.js"
+usemathjax: true
 
 # Exclude from processing.
 # The following items will not be processed, by default.
