--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,8 @@ plugins:
 katex:
   path_to_js: "katex.min.js"
 markdown: kramdown
+kramdown:
+    math_engine: katex
 
 # Exclude from processing.
 # The following items will not be processed, by default.
