--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ github_username:  Lian939
 theme: minima
 plugins:
   - jekyll-feed
-
+markdown: kramdown
 
 # Exclude from processing.
 # The following items will not be processed, by default.
