--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "BMI881 blog"
+title                    : "Biomedical data science scholarly literature blog"
 title_separator          : "|"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Lianlian Du"
-description              : "Critical evaluation of the scholarly literature is a crucial skill for researchers. BMI881 blog is a blog for the written article summaries and homework assignments of BMI881 literature review."
+description              : "Critical evaluation of the scholarly literature is a crucial skill for researchers. Biomedical data science scholarly literature blog is a blog for the written article summaries and homework assignments of BMI881 literature review."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
